RESOLVED FIXED275975
[Cleanup] RenderBlockFlow::first/lastLineBaseline is not used by svg
https://bugs.webkit.org/show_bug.cgi?id=275975
Summary [Cleanup] RenderBlockFlow::first/lastLineBaseline is not used by svg
alan
Reported 2024-06-27 17:16:01 PDT
ssia
Attachments
[fast-cq]Patch (4.26 KB, patch)
2024-06-27 17:21 PDT, alan
no flags
alan
Comment 1 2024-06-27 17:21:23 PDT
Created attachment 471759 [details] [fast-cq]Patch
EWS
Comment 2 2024-06-28 18:18:32 PDT
Committed 280488@main (5ce5d7e1b38c): <https://commits.webkit.org/280488@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471759 [details].
Radar WebKit Bug Importer
Comment 3 2024-06-28 18:19:14 PDT
Note You need to log in before you can comment on or make changes to this bug.