[Cleanup] RenderBlockFlow::first/lastLineBaseline is not used by svg https://bugs.webkit.org/show_bug.cgi?id=275975

Reviewed by Antti Koivisto.

Remove legacy line layout references.

* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::firstLineBaseline const):
(WebCore::RenderBlock::lastLineBaseline const):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::firstLineBaseline const):
(WebCore::RenderBlockFlow::lastLineBaseline const):

Canonical link: https://commits.webkit.org/280488@main